[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "queuectl"
version = "1.0.0"
description = "CLI Background Job Queue System"
readme = "README.md"
authors = [
    {name = "QueueCTL Team", email = "queuectl@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["queue", "job", "worker", "cli", "background", "task"]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Kaushik-2005/QueueCTL"
Repository = "https://github.com/Kaushik-2005/QueueCTL.git"
Issues = "https://github.com/Kaushik-2005/QueueCTL/issues"

[project.scripts]
queuectl = "cli.main:main"

[tool.setuptools.packages.find]
include = ["queue*", "cli*"]

[tool.setuptools.package-data]
queue = ["*.json"]